# token-optimizer

./: .execution_plan.md.swp  .gitignore  .tasks.json.swp  AGENT_ORCHESTRATOR_PLAN.md  CLAUDE.md  Makefile  PARTNER_README.md  TASK_BOARD.md  VISION.md  agentflow.py  agentflow_ledger.json  architecture.md  backlog.json  combined_report.html  coverage.json  design_status.md  execution_plan.md  generate_worker_prompt.py  install.sh  pyproject.toml  rate_calibration_claude.json  tasks.json
.agentflow/: cli_spike_design.md  context_fill.json  current_round.json  file_families.jsonl  handoff_2026-06-26.md  handoff_2026-06-26b.md  handoff_2026-06-26c.md  handoff_2026-06-26d.md  handoff_2026-06-27b.md  handoff_2026-06-27c.md  handoff_2026-06-27d.md  handoff_2026-06-27e.md  handoff_2026-06-27f.md  handoff_2026-06-27g.md  handoff_2026-06-27h.md  handoff_2026-06-28.md  handoff_2026-06-28b.md  handoff_2026-06-28c.md  handoff_2026-06-28d.md  handoff_2026-06-28e.md  handoff_2026-06-29.md  handoff_2026-06-29b.md  handoff_2026-06-29c.md  handoff_2026-06-29d.md  handoff_2026-06-29e.md  handoff_2026-06-29f.md  handoff_2026-06-29g.md  handoff_2026-06-29h.md  handoff_2026-06-29i.md  handoff_2026-06-29j.md  handoff_2026-06-29k.md  handoff_2026-06-29l.md  handoff_2026-06-29m.md  handoff_2026-06-29n.md  handoff_2026-06-29o.md  handoff_2026-06-29p.md  handoff_2026-06-30f.md  handoff_2026-06-30g.md  handoff_2026-06-30h.md  handoff_2026-06-30i.md  (+108 more)
.agents/: AGENTS.md  hooks.json
.claude/: settings.json
agentflow/: __init__.py  bundle.py  classification.py  cli.py  cli_cmds.py  cli_db.py  constants.py  init.py  legacy_cli.py  legacy_commands.py  legacy_helpers.py  legacy_report.py  shadow_tracker.py  usage_parser.py
commands/: README.md  drift.md  handoff.md  oracle.md  orchestrate.md
githooks/: pre-commit
(+417 files in other folders)
