[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentflow"
version = "0.1.0"
description = "AI-driven multi-agent project manager and token optimizer"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
agentflow = "agentflow.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentflow*"]

[tool.setuptools.package-data]
"agentflow" = ["config/defaults.yaml", "prompts/**/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=agentflow --cov-report=term-missing"
